# visual_loco

./: LICENSE  README.md
commutils/: CMakeLists.txt  package.xml
commutils/include/commutils/csv/: csv_writer.hpp
commutils/include/commutils/yaml/: yaml_cpp_fwd.hpp  yaml_eigen.hpp  yaml_tools.hpp
commutils/test/: gtest_main.cpp
commutils/test/csv/: test_csv_writer.cpp
commutils/test/yaml/: test_yaml_eigen.cpp  test_yaml_tools.cpp
go2_description/: CMakeLists.txt  README.md  package.xml
go2_description/launch/: view_model.launch.py
go2_description/rviz/: view_model.rviz
go2_description/urdf/: go2.urdf
go2_hw/: CMakeLists.txt  package.xml
go2_hw/configs/: go2_standing.yaml
go2_hw/demos/: go2_standing.cpp
go2_hw/include/go2_hw/: go2_const.hpp  hw_go2_interface.hpp  hw_robot_params.hpp  hw_robot_setting.hpp  joint_controller.hpp  robot_constants.hpp  robot_interface.hpp
go2_hw/src/: hw_go2_interface.cpp  hw_robot_setting.cpp  joint_controller.cpp  robot_interface.cpp
loco_bringup/: CMakeLists.txt  package.xml
loco_bullet/: package.xml  setup.cfg  setup.py
loco_bullet/loco_bullet/: robot_wrapper.py  world.py
loco_bullet/resource/: plane_with_restitution.urdf
visual_loco/: CMakeLists.txt  package.xml
