<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>commutils</name>
  <version>0.1.0</version>
  <description>
    Common utility functions and classes for the visual_loco project.
  </description>
  <maintainer email="junli@hit.edu.cn">Li Jun</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>Eigen3</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>gtest_ventor</test_depend>

  <!-- Export build information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
