<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_description</name>
  <version>1.0.0</version>
  <description>URDF description for the Go2 quadrupedal robot.</description>
  <maintainer email="junli@hit.edu.cn">Li Jun</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
