<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_loco</name>
  <version>0.0.1</version>
  <description>Metapackage for visual_loco</description>
  <maintainer email="junli@hit.edu.cn">Li Jun</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
