<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_loco</name>
  <version>0.1.0</version>
  <description>
    Metapackage to aggregate all packages in visual_loco project.
  </description>
  <maintainer email="junli@hit.edu.cn">Li Jun</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>go2_description</depend>
  <depend>commutils</depend>
  <depend>go2_hw</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
